my first commit...donno what i commited ..haha

--- a/web3.css
+++ b/web3.css
@@ -143,11 +143,13 @@ padding: 50px 0px;
 	width: 100%;
 	text-align: center;
 	margin-bottom: 50px;
+	
 }
 .container .title h1{
 	text-transform: uppercase;
 	font-size: 35px;
 	color: #88941e;
+	
 }
 .container .title h1::after{
 content: "";
@@ -215,7 +217,7 @@ margin: auto;
 	border-radius: 50%;
 	line-height: 45px;
 	text-align: center;
-	background-color: fff;
+	background-color:#1d1d1d; 
 	margin:0px 5px;
 } 
 .container .social a:hover{
